--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>Kei Wong</header>
     <main>
-        <!-- <img src="image/id_photo.jpg" alt="image of Kei Wong"> -->
+        <img src="image/id_photo.jpg" alt="image of Kei Wong">
         <dl>
             <dt>Student number</dt>
             <dd>041134743</dd>
