--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kei Wong</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>Kei Wong</header>
+    <header>
+        <h1>Kei Wong</h1>
+    </header>
     <main>
         <img src="image/id_photo.jpg" alt="image of Kei Wong">
         <dl>
